# featherlm

./: BENCHMARKS.md  README.md  RESEARCH.md  TODO.md  featherlm.py  notebook.py  notebook_largest_llm.py  pyproject.toml
